[package]
name = "rp-scale"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.186"
mdns-sd = { version = "0.19.1", default-features = false }
qrcodegen = "1.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.9.0"
unicode-normalization = "0.1"
